clang/test/BSC/Negative/SafeZone/safe_arithmetic_conversion/safe_arithmetic_conversion_lp64_negative.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s -triple x86_64-pc-linux-gnu

// LP64: narrowing 64-bit -> 32-bit within signed and unsigned grids.

_Static_assert(sizeof(int) == 4 && sizeof(long) == 8 && sizeof(long long) == 8,
               "LP64 integer widths");

_Safe void signed_narrow_lp64(void) {
  int d_i = 0;
  long s_l = 0;
  d_i = s_l; // expected-error {{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; use explicit cast or other means instead}}
  long long s_ll = 0;
  d_i = s_ll; // expected-error {{implicit conversion from type 'long long' to 'int' is forbidden in the safe zone; use explicit cast or other means instead}}
}

_Safe void unsigned_narrow_lp64(void) {
  unsigned int d_ui = 0;
  unsigned long s_ul = 0;
  d_ui = s_ul; // expected-error {{implicit conversion from type 'unsigned long' to 'unsigned int' is forbidden in the safe zone; use explicit cast or other means instead}}
  unsigned long long s_ull = 0;
  d_ui = s_ull; // expected-error {{implicit conversion from type 'unsigned long long' to 'unsigned int' is forbidden in the safe zone; use explicit cast or other means instead}}
}
